manifests/media-apps/lidarr-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lidarr-test-service
  name: lidarr-test-service
  namespace: media-apps
spec:
  type: ClusterIP
  ports:
  - port: 8686
    protocol: TCP
    targetPort: 8686
    name: web
  selector:
    app: lidarr-test
